# gen-ai-chatbot

./: .gitignore  DEPLOYMENT.md  README.md  app.py  pyproject.toml  runtime.txt  test_models.py
src/gen_ai_project/: __init__.py
